# KARR

./: .gitmodules  LICENSE  README.md  bootstrap.sh
src/: .gitignore  AngularInstrument.cpp  AngularInstrument.h  ArduinoDataPacket.h  CMakeLists.txt  CarDefinition.cpp  CarDefinition.h  Celica205Paths.C  CelicaDisplay.cpp  CelicaDisplay.h  Converter.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  GLUtil.cpp  GLUtil.h  Instrument.cpp  Instrument.h  Knight_Industries.C  SVGImage.cpp  SVGImage.h  SVGReader.cpp  SVGReader.h  Screen.cpp  Screen.h  SerialConnection.cpp  SerialConnection.h  SimpleTextDisplay.cpp  SimpleTextDisplay.h  Status.cpp  Status.h  TestInput.cpp  TestInput.h  main.cpp
src/VGPP/: Font.cpp  Font.h  Matrix.cpp  Matrix.h  Path.cpp  Path.h  Text.cpp  Text.h
src/cardefinitions/: Toyota_ST205.xml
src/cmake/Modules/: FindGLES2.cmake  Findbgfx.cmake  Findnanosvg.cmake  Findnanovg.cmake
xml/: TOY-ST205.xml
